--- a/src/app/views/colaborador/colaborador.component.html
+++ b/src/app/views/colaborador/colaborador.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="formulario">
       <div class="row">
         <div class="col-6">
-          <button class="btn btn-success mt-3" [routerLink]="['/formulario/cadastro-colaborador']"
+          <button class="btn btn-primary mt-3" [routerLink]="['/formulario/cadastro-colaborador']"
           routerLinkActive="router-link-active">Novo</button>
         </div>
         <div class="col-3">
